# C4-Modeler-LLM-Agents

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data/briefs/: clinic-management-system.yaml  library-management-system.yaml  nextgen-pos.yaml  online-bookstore.yaml  student-information-system.yaml
notebooks/: 01_quickstart.ipynb  experiments.ipynb
notebooks/data/results/GPT4omini_Collab_1r/20250922-230714-clinic-management-system-b9447f3d/: 1_context_analysis.md  1_context_definition.yaml  1_context_diagram.puml  2_container_analysis.md  2_container_definition.yaml  2_container_diagram.puml
notebooks/data/results/GPT4omini_Collab_1r/20250922-232338-library-management-system-e6172b11/: 1_context_analysis.md  1_context_definition.yaml  1_context_diagram.puml  2_container_analysis.md  2_container_definition.yaml  2_container_diagram.puml
notebooks/data/results/GPT4omini_Collab_1r/20250922-233910-nextgen-pos-6fd0435a/: 1_context_analysis.md  1_context_definition.yaml  1_context_diagram.puml  2_container_analysis.md  2_container_definition.yaml  2_container_diagram.puml
notebooks/data/results/clinic_management_system-gpt-4o-mini-Collab-1R/: 1_context_analysis.md  1_context_definition.yaml  1_context_diagram.puml  2_container_analysis.md  2_container_definition.yaml  2_container_diagram.puml
notebooks/data/results/clinic_management_system-gpt-4o-mini-Collab-1R/3_components/: database_analysis.md  (+26 more)
src/c4modeler/: __init__.py  agents.py  evaluation.py  experiments.py  graph.py  llm.py  models.py  pipeline.py  prompts.py  types.py  utils.py
(+133 files in other folders)
