[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "c4modeler"
version = "0.1.0"
description = "Collaborative LLM agents for C4 software architecture design"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Kamil Szczepanik" }]
license = { text = "MIT" }
keywords = ["C4", "architecture", "LLM", "plantuml", "langgraph", "langchain"]

# Optional runtime deps (trim/add as you like)
dependencies = [
  "langchain>=0.2",
  "langgraph>=0.2",
  "pyyaml>=6.0",
  "requests>=2.31",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
